--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,23 @@
-<div class="p-col-16 p-lg-6">
-  <h1>URL Shortener</h1>
-  <span class="p-float-label">
-    <input id="float-input" type="text" pInputText>
-    <label for="float-input">URL to shorten</label>
-  </span>
+<div class="p-col-12 p-lg-6">
+  <div class="container" style="min-width: 300px; width: 50%; margin-left: auto; margin-right: auto;">
+    <h1 style="text-align: center">shorten.it</h1>
+    <form (ngSubmit)="shortenUrl()">
+      <div class="p-inputgroup">
+      <span class="p-float-label">
+        <input #urlInput id="float-input" type="text" pInputText required (submit)="shortenUrl();">
+        <span #spinning class="p-input-icon-right hidden">
+          <i class="pi pi-spin pi-spinner"></i>
+        </span>
+        <label for="float-input">URL to shorten</label>
+        <p-button label="Shorten" class="p-inputgroup-addon" (mouseup)="shortenUrl();"></p-button>
+      </span>
+      </div>
+    </form>
+  </div>
 </div>
+
+
+<p-dialog [(visible)]="dialogVisible" [style]="{width: '50vw'}" [breakpoints]="{'960px': '75vw'}"
+          [draggable]="false" [resizable]="false" [modal]="true">
+  <p class="m-0">{{dialogText}}</p>
+</p-dialog>
