--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,3 +21,5 @@
           [draggable]="false" [resizable]="false" [modal]="true">
   <p class="m-0">{{dialogText}}</p>
 </p-dialog>
+
+<app-generated-links #links></app-generated-links>
